[gd_scene load_steps=2 format=3 uid="uid://b2xhfd4rjljdo"]

[ext_resource type="Script" uid="uid://bvdlihlsbqn6h" path="res://data/upgrades/upgrade_ui.gd" id="1_7ywy8"]

[node name="UpgradeUi" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ywy8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
